<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultiNote</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="popup_note">Popup Note</string>
    
	<!-- CATEGORY -->
    <string name="category_title">CATEGORIES</string>
    
    <!-- LIST SCREEN -->
    <string name="list_title">CATEGORY 1</string>

    <!-- DETAIL SCREEN -->
    <string name="detail_title">DETAIL RECORD 1</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="desciption">Description</string>
    <string name="type">Type</string>
    <string name="content">Content</string>
    
    <!-- CAPTURE SOUND -->
    <string name="capture">Capture</string>
    <string name="photo">Photo</string>
    
    <!-- DISPLAY CAPTURE SOUND -->
    <string name="displaycapturesound">Disply capture sound</string>
    
    <!-- SHOW NOTE -->
    <string name="ShowNote">Notes</string>
    <string name="NameNote">Name Note</string>
    <string name="date">Date</string>
    <string name="play">Play</string>
    <string name="next">></string>
    
    
</resources>